# zero-rk

./: CMakeLists.txt  CMakeSettings.json.example  README.md  build.config  build_all.sh
applications/: CMakeLists.txt
applications/cfd_plugin/: CMakeLists.txt  README.md  cuda_err_check.h  cuda_transpose.cu  cuda_transpose.h  cv_param_sparse.cpp  cv_param_sparse.h  generateZeroRKCFDPluginIFP.py  generateZeroRKCFDPluginTesterIFP.py  gpu_err_check.h  gpu_transpose.h  gpu_transpose.hip  matrix_funcs.cpp  matrix_funcs.h  ode_funcs.cpp  ode_funcs.h  optionable.cpp  optionable.h  optionable_base.h  reactor_base.cpp  reactor_base.h  reactor_constant_pressure.cpp  reactor_constant_pressure.h  reactor_constant_pressure_cpu.cpp  reactor_constant_pressure_cpu.h  reactor_constant_pressure_gpu.cu  reactor_constant_pressure_gpu.h  reactor_constant_pressure_gpu.hip  reactor_constant_volume.cpp  reactor_constant_volume.h  reactor_constant_volume_cpu.cpp  reactor_constant_volume_cpu.h  reactor_constant_volume_gpu.cu  reactor_constant_volume_gpu.h  reactor_constant_volume_gpu.hip  reactor_nvector_serial.cpp  reactor_nvector_serial.h  reactor_nvector_serial_cuda.cu  reactor_nvector_serial_cuda.h  reactor_nvector_serial_gpu.h  (+18 more)
applications/constVolumePSR/: CMakeLists.txt  cvIDT_sweep.cpp  cv_param_sparse.cpp  cv_param_sparse.h  generateidt_sweep_IFP.py  matrix_funcs.cpp  ode_funcs.cpp  ode_funcs.h  sweep_util_yml.cpp  sweep_util_yml.h  utility_funcs.h
applications/constVolumeWSR/: CMakeLists.txt  cvIDT_sweep.cpp  cvIDT_sweep_mpi.cpp  cv_param_sparse.cpp  cv_param_sparse.h  generateidt_sweep_IFP.py  matrix_funcs.cpp  matrix_funcs.h  ode_funcs.cpp  sweep_util_formatted.cpp  sweep_util_formatted.cpp.debug  sweep_util_formatted.h  sweep_util_yml.cpp  sweep_util_yml.h  utility_funcs.cpp  utility_funcs.h
applications/constVolumeWSR_TLA/: CMakeLists.txt  cvIDT_sweep.cpp  cv_param_sparse.cpp  cv_param_sparse.h  generateidt_sweep_IFP.py  matrix_funcs.cpp  matrix_funcs.h  ode_funcs.cpp  ode_funcs.h  sweep_util_yml.cpp  sweep_util_yml.h  utility_funcs.cpp
applications/counterflowSteady/: CMakeLists.txt  counterflow_steady_flame_solver.cpp  flame_params.cpp  flame_params.h  generateSteadyFlameIFP.py  kinsol_functions.cpp  kinsol_functions.h  set_initial_conditions.cpp  set_initial_conditions.h  sparse_matrix.cpp  sparse_matrix_dist.cpp
applications/counterflowUnsteady/: CMakeLists.txt  counterflow_unsteady_flame_solver.cpp  cvode_functions.cpp  cvode_functions.h  flame_params.cpp  flame_params.h  generateUnsteadyFlameIFP.py  set_initial_conditions.cpp  set_initial_conditions.h  sparse_matrix.h
applications/diffusionSteady/: CMakeLists.txt  diffusion_steady_flame_solver.cpp  flame_params.cpp  flame_params.h  generateUnsteadyFlameIFP.py  kinsol_functions.cpp  kinsol_functions.h  set_initial_conditions.cpp  set_initial_conditions.h  soot.cpp  soot.h  sparse_matrix.cpp  sparse_matrix.h  sparse_matrix_dist.cpp  sparse_matrix_dist.h
applications/diffusionUnsteady/: CMakeLists.txt  cvode_functions.cpp  cvode_functions.h  diffusion_unsteady_flame_solver.cpp  flame_params.cpp  flame_params.h  generateUnsteadyFlameIFP.py  set_initial_conditions.cpp  set_initial_conditions.h  soot.cpp  soot.h  sparse_matrix.cpp  sparse_matrix.h  sparse_matrix_dist.cpp  sparse_matrix_dist.h
applications/flame_api/: CMakeLists.txt  flame_params.cpp  flame_params.h  generateZeroRKFlameAPITesterIFP.py  kinsol_functions.cpp  kinsol_functions.h  optionable.h  sparse_matrix.cpp  sparse_matrix_dist.cpp  sparse_matrix_dist.h  zerork_flame_api.cpp  zerork_flame_api.h  zerork_flame_api_tester.cpp  zerork_flame_manager.cpp  zerork_flame_manager.h
applications/jacobian_stats/: CMakeLists.txt  atol_crossing.cpp  atol_crossing.h  cv_param_sparse.h  event_counter.cpp  event_counter.h  generateBasicReactorIFP.py  idtControlParams.cpp  idtControlParams.h  idtSolvers.cpp  idtSolvers.h  idt_diagnostic.cpp  idt_diagnostic.h  jacobian_stats.cpp  jacobian_stats.h  matrix_funcs.cpp  matrix_funcs.h  mechanism_stats.cpp  mechanism_stats.h  ode_funcs.cpp  ode_funcs.h  rhs_tests.cpp  rhs_tests.h  sparse_eigenvalues.cpp  sparse_eigenvalues.h  special_species.cpp  special_species.h  utility_funcs.cpp  utility_funcs.h
applications/lewisGenerator/: CMakeLists.txt  compute_lewis.cpp  compute_lewis.h  flame_params.cpp  flame_params.h  generateUnsteadyFlameIFP.py  lewisGenerator.cpp  set_initial_conditions.cpp  set_initial_conditions.h
applications/perturbAFactor/: CMakeLists.txt  cv_param_sparse.cpp  cv_param_sparse.h  generateAFactorIFP.py  idtControlParams.cpp  idtControlParams.h  idtSolvers.cpp  idtSolvers.h  matrix_funcs.cpp  matrix_funcs.h  ode_funcs.cpp  ode_funcs.h  perturbAFactor_common.cpp  perturbAFactor_common.h  perturbAFactor_mpi.cpp  perturbAFactor_serial.cpp  utility_funcs.cpp
applications/perturbAFactorGSA/: CMakeLists.txt  cv_param_sparse.h  generateGSA_AFactorIFP.py  gsa_stats.cpp  idtControlParams.cpp  idtControlParams.h  idtSolvers.cpp  idtSolvers.h  matrix_funcs.cpp  ode_funcs.cpp  ode_funcs.h  perturbAFactor_common.cpp  perturbAFactor_common.h  perturbAFactor_mpi.cpp  utility_funcs.h
applications/premixedSteady/: CMakeLists.txt  flame_params.cpp  flame_params.h  generateUnsteadyFlameIFP.py  kinsol_functions.cpp  kinsol_functions.h  premixed_steady_flame_solver.cpp  set_initial_conditions.cpp  sparse_matrix.h  sparse_matrix_dist.cpp  sparse_matrix_dist.h
applications/premixedUnsteady/: CMakeLists.txt  cvode_functions.cpp  cvode_functions.h  flame_params.cpp  flame_params.h  generateUnsteadyFlameIFP.py  premixed_unsteady_flame_solver.cpp  set_initial_conditions.cpp  set_initial_conditions.h  sparse_matrix.cpp
applications/thermo_check/: CMakeLists.txt  QuickCp.plt  QuickH.plt  QuickS.plt  generateThermoCheckIFP.py  janaf_thermo.cpp  janaf_thermo.h  lapack_wrapper.c  lapack_wrapper.h  polynomial.c  polynomial.h  thermo_check.cpp  thermo_check_only.cpp  thermo_fix.cpp  thermo_fix.h  (+2 more)
examples/: CMakeLists.txt  run_all.sh  run_parallel.sh  run_serial.sh
python/: CMakeLists.txt  MANIFEST.in  flamesolver.py.in  pyproject.toml
(+862 files in other folders)
