
add_subdirectory(thermo_check)

add_subdirectory(constVolumeWSR)
add_subdirectory(perturbAFactor)
add_subdirectory(perturbAFactorGSA)
add_subdirectory(jacobian_stats)
add_subdirectory(variable_volume)
add_subdirectory(variable_volume_batch)
add_subdirectory(variable_volume_gsa)
add_subdirectory(constVolumePSR)
add_subdirectory(constVolumeWSR_TLA)

add_subdirectory(premixedSteady)
add_subdirectory(premixedUnsteady)
add_subdirectory(diffusionSteady)
add_subdirectory(diffusionUnsteady)
add_subdirectory(counterflowUnsteady)
add_subdirectory(counterflowSteady)
add_subdirectory(lewisGenerator)

add_subdirectory(cfd_plugin)
add_subdirectory(flame_api)
